eks-cluster-ec2/k8s-files/network-policy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jjtech-project
  labels:
    project: tower
