eks-cluster-ec2/k8s-files/network-policy/pod3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod3
  namespace: jjtech-project
  labels:
    pod: pod3
spec:
  containers:
  - name: myapp
    image: nginx
    resources:
      limits:
        cpu: 200m
        memory: 500Mi
      requests:
        cpu: 100m
        memory: 200Mi
    ports:
    - containerPort:  80
      name:  http
