eks-cluster-ec2/k8s-files/network-policy/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      pod: pod3
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              pod: pod1
          namespaceSelector:
            matchLabels:
              project: tower
      ports:
        - protocol: TCP
          port: 80
